FIX: logo alignment + style

--- a/assets.src/sass/4-base/_layout.sass
+++ b/assets.src/sass/4-base/_layout.sass
@@ -1,6 +1,6 @@
 section
   width: 80vw
-  margin: 10vh auto
+  margin: 0 auto 10vh auto
   min-height: 50vh
 
 header
