--- a/assets.src/sass/6-components/_logo.sass
+++ b/assets.src/sass/6-components/_logo.sass
@@ -53,22 +53,28 @@
   margin: 0 auto
   display: flex
   flex-direction: column
-  opacity: 0
-  animation: fadein 3s 1500ms linear
-  animation-fill-mode: forwards
-  +until($tablets)
-    top: 280px
-    transform: scale(0.6)
-  +from($tablets)
-    top: 295px
+  top: 0
+  height: 800px
   +until($tablets)
     .logo
-      transform: translate(20px)
+      width: 250px
+      align-self: center
+      position: relative
+      top: 335px
+      left: 20px
     .subline
-      transform: translate(-20px, 80px)
-
+      width: 260px
+      position: relative
+      top: 390px
   +from($tablets)
     .logo
-      transform: translate(50px)
+      width: 500px
+      align-self: center
+      position: relative
+      top: 310px
+      left: 64px
     .subline
-      transform: translate(200px, 50px)
+      width: 400px
+      position: relative
+      top: 400px
+      align-self: center
